spacing issues fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -172,11 +172,11 @@
   }
 
   h3 {
-    @apply mt-8 first:mt-0 scroll-m-20 text-2xl font-semibold tracking-tight;
+    @apply mt-8 scroll-m-20 text-2xl font-semibold tracking-tight;
   }
 
   h4 {
-    @apply mt-6 first:mt-0 scroll-m-20 text-xl font-semibold tracking-tight;
+    @apply mt-6 scroll-m-20 text-xl font-semibold tracking-tight;
   }
 
   p {
